--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     <nav>
         <ul>
             <li><a href="affichertexte/index.html">Afficher texte</a></li>
-            <li><a href="animationcss/index.html"></a></li>
-            <li><a href="p5js+html/index.html"></a></li>
-            <li><a href="parallaxe/index.html"></a></li>
-            <li><a href="popup/popup.html"></a></li>
-            <li><a href="superposition/index.html"></a></li>
-            <li><a href="unmute/index.html"></a></li>
+            <li><a href="animationcss/index.html">Animations CSS</a></li>
+            <li><a href="p5js+html/index.html">P5.js + HTML</a></li>
+            <li><a href="parallaxe/index.html">Parallaxe CSS</a></li>
+            <li><a href="popup/popup.html">Faire un popup</a></li>
+            <li><a href="superposition/index.html">Superposition</a></li>
+            <li><a href="unmute/index.html">Unmute</a></li>
         </ul>
     </nav>
 </body>
