--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <li><a href="animationcss/index.html">Animations CSS</a></li>
             <li><a href="p5js+html/index.html">P5.js + HTML</a></li>
             <li><a href="parallaxe/index.html">Parallaxe CSS</a></li>
-            <li><a href="popup/popup.html">Faire un popup</a></li>
+            <li><a href="popup/index.html">Faire un popup</a></li>
             <li><a href="superposition/index.html">Superposition</a></li>
             <li><a href="unmute/index.html">Unmute</a></li>
         </ul>
